force-app/main/default/objects/Elaro_Feature_Flags__c/Elaro_Feature_Flags__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Kill-switch feature flags for each major Elaro module. Hierarchy Custom Setting allows per-org and per-user overrides. All flags default to TRUE (enabled).</description>
    <label>Elaro Feature Flags</label>
</CustomObject>