force-app/main/default/objects/Elaro_Feature_Flags__c/fields/AI_Governance_Enabled__c.field-meta.xml
<CustomField>
    <fullName>AI_Governance_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables or disables the Governance module. When false, governance features are hidden from users.</description>
    <label>Governance Enabled</label>
    <type>Checkbox</type>
</CustomField>