force-app/main/default/objects/Elaro_Feature_Flags__c/fields/AI_Governance_Pack_Enabled__c.field-meta.xml
<CustomField>
    <fullName>AI_Governance_Pack_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Kill switch for the AI Governance vertical pack (EU AI Act / NIST AI RMF). Distinct from AI_Governance_Enabled__c (module-level flag); this gates the pack classification in PackRegistry. Defaults true.</description>
    <label>AI Governance Pack Enabled</label>
    <type>Checkbox</type>
</CustomField>