force-app/main/default/objects/Elaro_Feature_Flags__c/fields/Assessment_Wizard_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Wizard_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables or disables the Assessment Wizard module. When false, assessment wizard features are hidden from users.</description>
    <label>Assessment Wizard Enabled</label>
    <type>Checkbox</type>
</CustomField>