force-app/main/default/objects/Elaro_Feature_Flags__c/fields/Command_Center_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Command_Center_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables or disables the Command Center module. When false, Command Center features are hidden from users.</description>
    <label>Command Center Enabled</label>
    <type>Checkbox</type>
</CustomField>