force-app/main/default/objects/Elaro_Feature_Flags__c/fields/Event_Monitoring_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Event_Monitoring_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables or disables the Event Monitoring module. When false, event monitoring features are hidden from users.</description>
    <label>Event Monitoring Enabled</label>
    <type>Checkbox</type>
</CustomField>