force-app/main/default/objects/Elaro_Feature_Flags__c/fields/Financial_Services_Pack_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Financial_Services_Pack_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Kill switch for the Financial Services vertical pack (e.g., GLBA, SOX, FINRA, SEC). When false, PackRegistry treats Financial Services pack frameworks as inactive. Defaults true.</description>
    <label>Financial Services Pack Enabled</label>
    <type>Checkbox</type>
</CustomField>