force-app/main/default/objects/Elaro_Feature_Flags__c/fields/HIPAA_Pack_Enabled__c.field-meta.xml
<CustomField>
    <fullName>HIPAA_Pack_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Kill switch for the HIPAA vertical pack (healthcare). When false, PackRegistry treats HIPAA-pack frameworks and engines as inactive. Defaults true.</description>
    <label>HIPAA Pack Enabled</label>
    <type>Checkbox</type>
</CustomField>