force-app/main/default/objects/Elaro_Feature_Flags__c/fields/SEC_Module_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SEC_Module_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables or disables the SEC Cybersecurity Disclosure module. When false, SEC features are hidden from users.</description>
    <label>SEC Module Enabled</label>
    <type>Checkbox</type>
</CustomField>