force-app/main/default/objects/Elaro_Feature_Flags__c/fields/Trust_Center_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Trust_Center_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enables or disables the Trust Center module. When false, Trust Center features are hidden from users.</description>
    <label>Trust Center Enabled</label>
    <type>Checkbox</type>
</CustomField>